【修改】优化数据读取js

--- a/index.html
+++ b/index.html
@@ -451,18 +451,18 @@
             </div>
             <div class="J_g_t_cont md-warp-cont-list">
                 <div class="md-warp-cont-item">
-                    <div class="J_clzn_bn md-warp-bn">
-                        <script id="T_clnz_bn" type="text/html">
-                            {{each clzn_bn as data}}
+                    <div class="J_bn_clnz md-warp-bn">
+                        <script id="T_bn_clnz" type="text/html">
+                            {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
                                     <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
                     </div>
-                    <ul class="J_clzn_goods md-warp-cont">
-                        <script id="T_clnz_goods" type="text/html">
-                            {{each clnz_goods as data}}
+                    <ul class="J_goods_clnz md-warp-cont">
+                        <script id="T_goods_clnz" type="text/html">
+                            {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
                                         <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
@@ -480,18 +480,18 @@
                     </ul>
                 </div>
                 <div class="md-warp-cont-item">
-                    <div class="J_jpnz_bn md-warp-bn">
-                        <script id="T_jpnz_bn" type="text/html">
-                            {{each jpnz_bn as data}}
+                    <div class="J_bn_jpnz md-warp-bn">
+                        <script id="T_bn_jpnz" type="text/html">
+                            {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
                                     <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
                     </div>
-                    <ul class="J_jpnz_goods md-warp-cont">
-                        <script id="T_jpnz_goods" type="text/html">
-                            {{each jpnz_goods as data}}
+                    <ul class="J_goods_jpnz md-warp-cont">
+                        <script id="T_goods_jpnz" type="text/html">
+                            {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
                                         <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
@@ -509,18 +509,18 @@
                     </ul>
                 </div>
                 <div class="md-warp-cont-item">
-                    <div class="J_xzxb_bn md-warp-bn">
-                        <script id="T_xzxb_bn" type="text/html">
-                            {{each xzxb_bn as data}}
+                    <div class="J_bn_xzxb md-warp-bn">
+                        <script id="T_bn_xzxb" type="text/html">
+                            {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
                                     <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
                     </div>
-                    <ul class="J_xzxb_goods md-warp-cont">
-                        <script id="T_xzxb_goods" type="text/html">
-                            {{each xzxb_goods as data}}
+                    <ul class="J_goods_xzxb md-warp-cont">
+                        <script id="T_goods_xzxb" type="text/html">
+                            {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
                                         <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
@@ -538,18 +538,18 @@
                     </ul>
                 </div>
                 <div class="md-warp-cont-item">
-                    <div class="J_sxps_bn md-warp-bn">
-                        <script id="T_sxps_bn" type="text/html">
-                            {{each sxps_bn as data}}
+                    <div class="J_bn_sxps md-warp-bn">
+                        <script id="T_bn_sxps" type="text/html">
+                            {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
                                     <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
                     </div>
-                    <ul class="J_sxps_goods md-warp-cont">
-                        <script id="T_sxps_goods" type="text/html">
-                            {{each sxps_goods as data}}
+                    <ul class="J_goods_sxps md-warp-cont">
+                        <script id="T_goods_sxps" type="text/html">
+                            {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
                                         <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
@@ -592,18 +592,18 @@
             </div>
             <div class="J_g_t_cont md-warp-cont-list">
                 <div class="md-warp-cont-item">
-                    <div class="J_mstc_bn md-warp-bn">
-                        <script id="T_mstc_bn" type="text/html">
-                            {{each mstc_bn as data}}
+                    <div class="J_bn_mstc md-warp-bn">
+                        <script id="T_bn_mstc" type="text/html">
+                            {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
                                     <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
                     </div>
-                    <ul class="J_mstc_goods md-warp-cont">
-                        <script id="T_mstc_goods" type="text/html">
-                            {{each mstc_goods as data}}
+                    <ul class="J_goods_mstc md-warp-cont">
+                        <script id="T_goods_mstc" type="text/html">
+                            {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
                                         <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
@@ -621,18 +621,18 @@
                     </ul>
                 </div>
                 <div class="md-warp-cont-item">
-                    <div class="J_smjd_bn md-warp-bn">
-                        <script id="T_smjd_bn" type="text/html">
-                            {{each smjd_bn as data}}
+                    <div class="J_bn_smjd md-warp-bn">
+                        <script id="T_bn_smjd" type="text/html">
+                            {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
                                     <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
                     </div>
-                    <ul class="J_smjd_goods md-warp-cont">
-                        <script id="T_smjd_goods" type="text/html">
-                            {{each smjd_goods as data}}
+                    <ul class="J_goods_smjd md-warp-cont">
+                        <script id="T_goods_smjd" type="text/html">
+                            {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
                                         <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
@@ -650,18 +650,18 @@
                     </ul>
                 </div>
                 <div class="md-warp-cont-item">
-                    <div class="J_jjry_bn md-warp-bn">
-                        <script id="T_jjry_bn" type="text/html">
-                            {{each jjry_bn as data}}
+                    <div class="J_bn_jjry md-warp-bn">
+                        <script id="T_bn_jjry" type="text/html">
+                            {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
                                     <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
                     </div>
-                    <ul class="J_jjry_goods md-warp-cont">
-                        <script id="T_jjry_goods" type="text/html">
-                            {{each jjry_goods as data}}
+                    <ul class="J_goods_jjry md-warp-cont">
+                        <script id="T_goods_jjry" type="text/html">
+                            {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
                                         <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
@@ -679,18 +679,18 @@
                     </ul>
                 </div>
                 <div class="md-warp-cont-item">
-                    <div class="J_zhsp_bn md-warp-bn">
-                        <script id="T_zhsp_bn" type="text/html">
-                            {{each zhsp_bn as data}}
+                    <div class="J_bn_zhsp md-warp-bn">
+                        <script id="T_bn_zhsp" type="text/html">
+                            {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
                                     <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
                     </div>
-                    <ul class="J_zhsp_goods md-warp-cont">
-                        <script id="T_zhsp_goods" type="text/html">
-                            {{each zhsp_goods as data}}
+                    <ul class="J_goods_zhsp md-warp-cont">
+                        <script id="T_goods_zhsp" type="text/html">
+                            {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
                                         <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
@@ -762,18 +762,18 @@
                     </ul>
                 </div>
                 <div class="md-warp-cont-item">
-                    <div class="J_yyrp_bn md-warp-bn">
-                        <script id="T_yyrp_bn" type="text/html">
-                            {{each yyrp_bn as data}}
+                    <div class="J_bn_yryp md-warp-bn">
+                        <script id="T_bn_yryp" type="text/html">
+                            {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
                                     <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
                     </div>
-                    <ul class="J_yyrp_goods md-warp-cont">
-                        <script id="T_yyrp_goods" type="text/html">
-                            {{each yyrp_goods as data}}
+                    <ul class="J_goods_yryp md-warp-cont">
+                        <script id="T_goods_yryp" type="text/html">
+                            {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
                                         <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
@@ -791,18 +791,18 @@
                     </ul>
                 </div>
                 <div class="md-warp-cont-item">
-                    <div class="J_zjwj_bn md-warp-bn">
-                        <script id="T_zjwj_bn" type="text/html">
-                            {{each zjwj_bn as data}}
+                    <div class="J_bn_zjwj md-warp-bn">
+                        <script id="T_bn_zjwj" type="text/html">
+                            {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
                                     <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
                     </div>
-                    <ul class="J_zjwj_goods md-warp-cont">
-                        <script id="T_zjwj_goods" type="text/html">
-                            {{each zjwj_goods as data}}
+                    <ul class="J_goods_zjwj md-warp-cont">
+                        <script id="T_goods_zjwj" type="text/html">
+                            {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
                                         <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
@@ -820,18 +820,18 @@
                     </ul>
                 </div>
                 <div class="md-warp-cont-item">
-                    <div class="J_ycxm_bn md-warp-bn">
-                        <script id="T_ycxm_bn" type="text/html">
-                            {{each ycxm_bn as data}}
+                    <div class="J_bn_ycxm md-warp-bn">
+                        <script id="T_bn_ycxm" type="text/html">
+                            {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
                                     <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
                     </div>
-                    <ul class="J_ycxm_goods md-warp-cont">
-                        <script id="T_ycxm_goods" type="text/html">
-                            {{each ycxm_goods as data}}
+                    <ul class="J_goods_ycxm md-warp-cont">
+                        <script id="T_goods_ycxm" type="text/html">
+                            {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
                                         <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
