【修改】提交楼层高亮js

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                                     <li>
                                         <a href="{{data.link}}" target="_blank">
                                             <img class="loading" src="static/src/img/blank.gif" data-layzr="{{data.imgurl}}" width="173" height="173" alt="{{data.tit}}" />
-                                            <span class="goods-title">{{data.tit}}</span>
+                                            <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                         </a>
                                         <p class="price-box">
                                             <span class="hs-price"><b>￥</b>{{data.zhs_price}}</span>
@@ -407,7 +407,7 @@
                                     <li>
                                         <a href="{{data.link}}" target="_blank">
                                             <img class="loading" src="static/src/img/blank.gif" data-layzr="{{data.imgurl}}" width="173" height="173" alt="{{data.tit}}" />
-                                            <span class="goods-title">{{data.tit}}</span>
+                                            <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                         </a>
                                         <p class="price-box">
                                             <span class="hs-price"><b>￥</b>{{data.zhs_price}}</span>
@@ -455,7 +455,7 @@
                         <script id="T_bn_clnz" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -465,8 +465,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
@@ -484,7 +484,7 @@
                         <script id="T_bn_jpnz" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -494,8 +494,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
@@ -513,7 +513,7 @@
                         <script id="T_bn_xzxb" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -523,8 +523,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" data-tit="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
@@ -542,7 +542,7 @@
                         <script id="T_bn_sxps" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -552,8 +552,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
@@ -596,7 +596,7 @@
                         <script id="T_bn_mstc" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -606,8 +606,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
@@ -625,7 +625,7 @@
                         <script id="T_bn_smjd" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -635,8 +635,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
@@ -654,7 +654,7 @@
                         <script id="T_bn_jjry" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -664,8 +664,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
@@ -683,7 +683,7 @@
                         <script id="T_bn_zhsp" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -693,8 +693,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
@@ -737,7 +737,7 @@
                         <script id="T_bn_ytfz" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -747,8 +747,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
@@ -766,7 +766,7 @@
                         <script id="T_bn_yryp" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -776,8 +776,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
@@ -795,7 +795,7 @@
                         <script id="T_bn_zjwj" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -805,8 +805,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
@@ -824,7 +824,7 @@
                         <script id="T_bn_ycxm" type="text/html">
                             {{each bn as data}}
                                 <a href="{{data.link}}" target="_blank">
-                                    <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
+                                    <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" alt="{{data.tit}}">
                                 </a>
                             {{/each}}
                         </script>
@@ -834,8 +834,8 @@
                             {{each goods as data}}
                                 <li>
                                     <a href="{{data.link}}" target="_blank">
-                                        <img data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
-                                        <span class="goods-title">{{data.tit}}</span>
+                                        <img class="loading" data-layzr="{{data.imgurl}}" src="static/src/img/blank.gif" width="173" height="173" alt="{{data.tit}}" />            
+                                        <span class="goods-title" title="{{data.tit}}" >{{data.tit}}</span>
                                     </a>
                                     <p class="price-box">
                                         <span class="hs-price"> <b>￥</b>
